<resources>
    <string name="app_name">AppSets</string>
    <string name="title_search"><![CDATA[Search Apps&Games]]></string>
    <string name="today">Recommend</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cat_top_apps">Top Apps</string>
    <string name="action_more">More</string>
    <string name="cat_top_games">Top Games</string>
    <string name="cat_top_family">Top Famliy Apps</string>
    <string name="action_installed">Installed</string>
    <string name="availability_restriction_country">This item is not available in your country.</string>
    <string name="availability_restriction_hardware_app">Your device is not compatible with this version.</string>
    <string name="availability_restriction_generic">This item is not available.</string>
    <string name="installer_status_failure">Installation failed</string>
    <string name="installer_status_failure_aborted">Installation cancelled</string>
    <string name="installer_status_failure_blocked">Installation was blocked</string>
    <string name="installer_status_failure_conflict">A conflicting package exists</string>
    <string name="installer_status_failure_incompatible">Incompatible app</string>
    <string name="installer_status_failure_invalid">Invalid or corrupted APK</string>
    <string name="installer_status_failure_storage">Insufficient storage space</string>
    <string name="installer_status_user_action">Waiting for user confirmation</string>
    <string name="installer_status_success">Successfully installed</string>
    <string name="installer_status_unknown">Unknow</string>
    <string name="dialog_uninstall_confirmation">Do you want to uninstall this app ?</string>
    <string name="notification_channel_alert">Quick notification</string>
    <string name="notification_channel_general">General notification</string>
    <string name="error_no_network">No network connection</string>
    <string name="action_logging_in">Logging in</string>
    <string name="toast_login_success">Successfully login</string>
    <string name="toast_login_failed">Failed to login</string>
    <string name="account_dummy">Anonymous</string>
    <string name="action_retry">Retry</string>
    <string name="content_description_icon">App Icon</string>
    <string name="toast_api_build_api">Building Play API</string>
    <string name="toast_api_all_ok">All set to go</string>
    <string name="toast_api_build_failed">Failed to build API.</string>
    <string name="details_no_changes">"Changelog not provided by the developer"</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="details_download">Download</string>
    <string name="download_waiting">Downloading</string>
    <string name="action_unknown">Unknown</string>
    <string name="details_more">More Details</string>
    <string name="details_rating_reviews">Rating reviews</string>
    <string name="details_rate_this_app">Rate this app</string>
    <string name="details_why_rate_this_app">Why rate this app</string>
    <string name="delete">Delete</string>
    <string name="details_appReviewsAll">All reviews</string>
    <string name="details_dev_details">Developer\'s details</string>
    <string name="details_dev_website">developer website</string>
    <string name="details_dev_email">developer Email</string>
    <string name="details_dev_address">developer Address</string>
    <string name="exodus_viewMore">show more exodus</string>
    <string name="about">About</string>
    <string name="sign_to_appsets">Sign in to AppSets</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="signin_text">Sign in</string>
    <string name="signup_text">Sign up</string>
    <string name="signup_to_appsets">Sign up to AppSets</string>
    <string name="sikp">Skip Shit</string>
    <string name="buildingApi">Building GooglePlay API</string>
    <string name="action_registering">Registering</string>
    <string name="repeatp_assword">Reapeat The Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_details">App Details</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="pref_default">Default</string>
    <string name="pref_ui_theme_light">Just Light</string>
    <string name="pref_ui_theme_dark">Just Dark</string>
    <string name="pref_ui_theme_black">Just Black</string>
    <string name="pref_ui_theme_follow_system">Follow System (android 10+)</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_locale_custom_summary">Enforce custom app language</string>
    <string name="pref_locale_custom_title">Custom language</string>
    <string name="pref_locale_list_title">Select locale</string>
    <string name="preference_theme">Theme</string>
    <string name="preference_about">About</string>
    <string name="about_text">🍕 No About.</string>
    <string name="signout">Sign out</string>
    <string name="logged_user_profil">Me</string>
    <string name="developer_not_provide_change_log">There doesn\'t seem to be any change log here</string>
    <string name="search">Search</string>
    <string name="list_empty_updates">"No updates available"</string>
    <string name="action_filter">Filter</string>
    <string name="list_app_system">System App</string>
    <string name="list_app_user">User App</string>
    <string name="action_loading">Loading</string>
    <string name="grant_storage_permissions">Grant storage permissions</string>
    <string name="no_google_paly_api">No GooglePlay API</string>
    <string name="details_rating">Details Rating</string>
    <string name="list_app_independent_from_gsf">app independent from gsf</string>
    <string name="list_app_depends_on_gsf">app depends on gsf</string>
    <string name="list_app_has_ads">has ads</string>
    <string name="list_app_no_ads">no ads</string>
    <string name="actio_down">Download</string>
    <string name="timeline">TimeLine</string>
    <string name="search_recommend_words">Recommend you to search for \"YouTube\"</string>
    <string name="dialog_purchase_title">"App Purchase"</string>
    <string name="dialog_purchase_desc">"You need to purchase this app first. Aurora Store does not currently support in-app purchases, you will be redirected to web page for the purchase."</string>
    <string name="dialog_purchase_positive">"Buy now"</string>
    <string name="action_later">Later</string>
    <string name="details_update">Update</string>
    <string name="details_run">Open</string>
    <string name="chinese_simplified">Chinese Simplified</string>
    <string name="english">English</string>
    <string name="french">France</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="appsets">Appsets</string>
    <string name="app_price">Price</string>
    <string name="price_symbol">$</string>
    <string name="free">Free</string>
    <string name="collected">Favorited</string>
    <string name="times_string">times</string>
    <string name="uncollect">UnCollect it</string>
    <string name="collect_it">Collect it</string>
    <string name="main_search_bar_text">Recommend : %s</string>
    <string name="app_favorites_times">%s Favorites</string>
    <string name="type_music">Music</string>
    <string name="type_game">Game</string>
    <string name="type_tools">Tools</string>
    <string name="type_family">Family</string>
    <string name="type_knowledge">Knowledge</string>
    <string name="type_photography">Photography</string>
    <string name="type_shopping">Shopping</string>
    <string name="type_im">Instant Message</string>
    <string name="type_news">News</string>
    <string name="type_freetime">Free time</string>
    <string name="type_healthy">Healthy</string>
    <string name="type_office">Office</string>
    <string name="type_parentchild">Parent-Child</string>
    <string name="show_details">Details</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="write_a_review">Review it</string>
    <string name="feedback">Feedback</string>
    <string name="me">Me</string>
    <string name="msg_token_fmt" translatable="false">FCM Token %s</string>
    <string name="start_planning">Start planning</string>
    <string name="purchase">Purchase</string>
    <string name="review_placeholder">Reviews</string>
    <string name="all_permission">Requested permission</string>
    <string name="user_nickname_placeholder">Nickname :</string>
    <string name="support_genuine">Support genuine, let developers develop more motivated</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="user_avatar_placeholder">Avatar :</string>
    <string name="choose_a_img">Choose an image</string>
    <string name="modify">Modify</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="cant_be_empty">Not allowed be empty here!</string>
    <string name="updating">Updating...</string>
    <string name="please_rechoose_image">Please reselect</string>
    <string name="open_appname">Open %s</string>
    <string name="successful">Successful</string>
    <string name="please_enjoy">Please enjoy</string>
    <string name="purchasing">Purchasing</string>
    <string name="buy_via_appsets">Purchase through AppSets</string>
    <string name="purchase_price">Price</string>
    <string name="action_confirm_text">Ok</string>
    <string name="purchase_item">Purchase item</string>
    <string name="payment_method">Payment method</string>
    <string name="notification_channel_appsets_download">AppSets Download Notification</string>
    <string name="details_rating_number" translatable="false">%1$.1f</string>
    <string name="title_all_apps">All apps</string>
    <string name="category_all">"All categories"</string>
    <string name="category_family">"Family"</string>
    <string name="category_games">"Games"</string>
    <string name="download_progress">Downloading</string>
    <string name="download_paused">Paused</string>
    <string name="download_canceled">Canceled</string>
    <string name="details_install">Install</string>
    <string name="details_installing">Installing</string>
    <string name="installer_status_ongoing">Installing</string>
    <string name="action_resume">Resume</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_pause">Pause</string>
    <string name="download_queued">Queued</string>
    <string name="download_failed">Failed</string>
    <string name="download_completed">Downloaded</string>
    <string name="download_extraction">Extracting game resource, wait for completion</string>
    <string name="download_extraction_completed">Games resource extraction completed</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_account">Forget account?</string>
    <string name="your_account">Your account</string>
    <string name="manager">manager</string>
</resources>