<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_theme">
        <ListPreference
            app:icon="@drawable/ic_ui"
            app:defaultValue="light"
            app:entries="@array/pref_themes"
            app:entryValues="@array/pref_themes_values"
            app:key="PREFERENCE_THEME"
            app:title="@string/preference_theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_locale_custom_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="PREFERENCE_LOCALE_CUSTOM"
            app:summary="@string/pref_locale_custom_summary"
            app:title="@string/pref_locale_custom_title" />

        <ListPreference
            app:icon="@drawable/ic_language"
            app:defaultValue="Default"
            app:dependency="PREFERENCE_LOCALE_CUSTOM"
            app:entries="@array/pref_locale_names"
            app:entryValues="@array/pref_locale_values"
            app:key="PREFERENCE_LOCALE_LIST"
            app:title="@string/pref_locale_list_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/preference_about">
    <Preference
        app:key="PREFERENCE_ABOUT"
        app:icon="@drawable/ic_help_outline_black_24dp"
        app:title="@string/preference_about" >

    </Preference>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
